--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
         <nav>
           <div class="personal__logo">Johnny Sanabria</div>  
                 <ul class="navlinklist">
-                    <li><a href="" class="
+                    <li class="nav__link">
+                        <a href="" class="
                         navlinkanchor
                         link__hover-effect
-                        link__hover--effect--black">Languages</a>
+                        link__hover-effect--black">Languages</a>
                         </li>
-                    <li><a href="" class="
+                    <li class="nav__link">
+                        <a href="" class="
                         navlinkanchor 
                         link__hover-effect
                         link__hover-effect--black">Projects</a>
                         </li>
-                    <li><a href="" class="
+                    <li class="nav__link">
+                        <a href="" class="
                         navlinkanchor 
                         nav__link--anchor-primary">Contacts</a>
                         </li>
@@ -37,8 +40,8 @@
                     <figure class="about-me__picture--mask">
                         <img src="./images/Bella.jpg" class="about-me__picture " alt="Picture of Me!">
                     </figure>
-                    <h1 class="about-me__info--title"> Hello I'm <span class="text--purple">Johnny Sanabria</span> &#x1F44B; </h1>
-                    <p class="about-me__info--para"> I'm a inspiring<strong class="text--purple">frontend software engineer</strong>. Add SOMETHING TO THIS!!
+                    <h1 class="about-me__info--title"> Hello I'm <span class="text--purple">Johnny Sanabria</span>&nbsp;<span class="wave"> &#x1F44B;</span> </h1>
+                    <p class="about-me__info--para"> I'm a inspiring <strong class="text--purple">frontend software engineer</strong>. Add SOMETHING TO THIS!!
                         I am working to change careers within the next 6-12 months. 
                         I want to become a frontend software engineer.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -76,7 +79,7 @@
      <!-- Logo Section Technology stack-->
 
      <section id="languages">
-        <div class="container">
+        <div class="container row">
             <div class="row">
                 <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
                     <div class="language__list">
@@ -221,9 +224,13 @@
 </section>
 <footer>
     <div class="row footer__row">
-        <a href="#">
-            <figure class="footer_img">
+        <a href="#" class="footer__anchor">
+            <figure class="footer__logo">
                 <img src="./images/logo.svg" class="footer__logo--img" alt="">
+                <span class="footer__logo--popper">
+                    Top 
+                    <i class="fas fa-arrow-up"></i>
+                </span>
             </figure>
         </a>
         <div class="footer__social--list">
@@ -237,7 +244,7 @@
                                  footer__social--link
                                  link__hover-effect
                                  link__hover-effect__white"
-                                 target="_blank">github 
+                                 target="_blank">Github 
                                     
                                 </a>
                             
